# fall-detection-robot

./: CLAUDE.md  README.md  frames_2026-06-26_02.52.08.gv  hardware_test.py  launch_lidar.sh  map_saver_params.yaml  save_slam_map.sh  slam_config.yaml
install/: local_setup.sh  setup.sh
install/robot_driver/lib/robot_driver/: motor_controller  odom_publisher
install/robot_driver/share/robot_driver/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_driver/share/robot_driver/launch/: robot_bringup.launch.py
install/rplidar_ros/share/rplidar_ros/: package.sh
install/rplidar_ros/share/rplidar_ros/launch/: rplidar_a1_launch.py.save
maps/: extract_largest_map.py  home_map.pgm  home_map.yaml
maps/home_map_bag/: home_map_bag_0.mcap  metadata.yaml
maps/home_map_final/: metadata.yaml
src/robot_driver/: CMakeLists.txt  package.xml  setup.py
src/robot_driver/config/: amcl_params.yaml  nav2_params.yaml
src/robot_driver/launch/: localization.launch.py  nav2_navigation.launch.py  robot_bringup.launch.py
src/robot_driver/robot_driver/: firestore_dispatcher.py  motor_controller.py  odom_publisher.py
src/rplidar_ros/launch/: rplidar_a1_launch.py
src/rplidar_ros/src/: rplidar_node.cpp
